<resources>
    <string name="app_name">Efficient Person</string>
    <string name="add_habit_content_description">Add new habit</string>
    <string name="delete_habit_content_description">Delete habit</string>
    <string name="restore_habit_content_description">Restore habit</string>
    <string name="title_hint">Title:</string>
    <string name="description_hint">Description:</string>
    <string name="save_btn">Save</string>
    <string name="error_input_title">Invalid title</string>
    <string name="good_or_bad_habit">Good or Bad habit</string>
    <string name="good_habit">Good habit</string>
    <string name="bad_habit">Bad habit</string>
    <string name="passed_or_not">Passed or not</string>
    <string name="passed">Passed</string>
    <string name="not_passed">Not passed</string>
    <string name="delete">Deleting</string>
    <string name="restore_btn">Restore</string>
</resources>